Fic layout issues with partners section

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -210,12 +210,12 @@ nav {
 }
 
 .partners-list {
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .list-item {
-  width: 160px;
-  height: 160px;
+  width: 120px;
+  height: 120px;
 }
 
 /* Contact */
